fixed privacy consent dialog overflow bug

--- a/src/components/templates/PrivacyConsent/PrivacyConsentDialog.module.scss
+++ b/src/components/templates/PrivacyConsent/PrivacyConsentDialog.module.scss
@@ -1,6 +1,8 @@
 @use "../../../styles/core.module.scss" as core;
 
 .dialog {
+    overflow: auto;
+    max-height: 100%;
 
     .checkboxLabel {}
 
